# FFT_Benchmark

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Abstract_FFT.hpp  Data_Functions.hpp  FFTW_Class.hpp  Plotting_Functions.hpp  Run_Functions.hpp  cuFFT_Class.hpp  rocFFT_Class.hpp
src/: Data_Functions.cpp  FFTW_Class.cpp  Plotting_Functions.cpp  Run_Functions.cpp  cuFFT_Class.cpp  rocFFT_Class.cpp
